update: is visible form fixed

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -11,7 +11,7 @@
 		width: 45%;
 		word-break: break-word;
 		@media (max-width: 1000px) {
-			widows: 95%;
+			width: 95%;
 		}
 	}
 
